# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2024 Sid <sidtosh4@gmail.com>

help_files = [
  'how-to-reinstall-a-web-app.page',
  'index.page',
  'legal.xml',
  'software-licensing.page',
  'software-metadata.page',
]

help_media = [
  'figures/age-rating-tile.png',
  'figures/carousel.png',
  'figures/community-built.svg',
  'figures/hardware-support-tile.png',
  'figures/install-webapp-step1.png',
  'figures/install-webapp-step2.png',
  'figures/links/community-symbolic.svg',
  'figures/links/computer-fail-symbolic.svg',
  'figures/links/flag-outline-thin-symbolic.svg',
  'figures/links/help-link-symbolic.svg',
  'figures/links/money-symbolic.svg',
  'figures/links.svg',
  'figures/links/webpage-symbolic.svg',
  'figures/no-links.svg',
  'figures/proprietary-and-special.svg',
  'figures/safety-tile.png',
  'figures/storage-tile.png',
  'figures/unknown.svg',
]

gnome.yelp (meson.project_name (),
            sources: help_files,
            media: help_media,
            symlink_media: true,
)
