# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2024 Sid <sidtosh4@gmail.com>

help_files = [
  'how-to-reinstall-a-web-app.page',
  'index.page',
  'legal.xml',
  'software-licensing.page',
  'software-metadata.page',
]

help_media = [
  'figures/age-rating-tile.png',
  'figures/app-screenshot.png',
  'figures/carousel.png',
  'figures/hardware-support-tile.png',
  'figures/install-webapp-step1.png',
  'figures/install-webapp-step2.png',
  'figures/safety-tile.png',
  'figures/scalable/community-built.svg',
  'figures/scalable/links.svg',
  'figures/scalable/no-links.svg',
  'figures/scalable/no-screenshots.svg',
  'figures/scalable/proprietary-and-special.svg',
  'figures/scalable/symbolic/community-symbolic.svg',
  'figures/scalable/symbolic/computer-fail-symbolic.svg',
  'figures/scalable/symbolic/flag-outline-thin-symbolic.svg',
  'figures/scalable/symbolic/help-link-symbolic.svg',
  'figures/scalable/symbolic/money-symbolic.svg',
  'figures/scalable/symbolic/webpage-symbolic.svg',
  'figures/scalable/unknown.svg',
  'figures/storage-tile.png',
]

gnome.yelp (meson.project_name (),
            sources: help_files,
            media: help_media,
            symlink_media: true,
)
