# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: 2024 Sid <sidtosh4@gmail.com>

help_files = [
  'how-to-reinstall-a-web-app.page',
  'index.page',
  'legal.xml',
  'software-licensing.page',
  'software-metadata.page',
]

help_media = [
  'figures/app-context-bar.png',
  'figures/app-screenshot.png',
  'figures/carousel.png',
  'figures/install-webapp-from-gnome-web.png',
  'figures/scalable/license-community-built.svg',
  'figures/scalable/license-proprietary-and-special.svg',
  'figures/scalable/license-unknown.svg',
  'figures/scalable/links.svg',
  'figures/scalable/no-links.svg',
  'figures/scalable/symbolic/computer-fail-symbolic.svg',
  'figures/scalable/symbolic/contact-symbolic.svg',
  'figures/scalable/symbolic/donate-symbolic.svg',
  'figures/scalable/symbolic/help-link-symbolic.svg',
  'figures/scalable/symbolic/image-missing-symbolic.svg',
  'figures/scalable/symbolic/translations-symbolic.svg',
  'figures/scalable/symbolic/webpage-symbolic.svg',
]

gnome.yelp (meson.project_name (),
            sources: help_files,
            media: help_media,
            symlink_media: true,
)
